--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ Thumbs.db
 
 # Advent of Code session (keep this private!)
 aoc_session.txt
+
+# Advent of Code input files (user-specific, should not be in repo)
+days/day_*/data/input.txt
+days/day_*/data/test_input.txt
